--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ DEMO_MODE="Off"
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST="localhost"
+DB_HOST="127.0.0.1"
 DB_PORT="3306"
 DB_DATABASE="install_shop_db"
 DB_USERNAME="root"
